// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic RadioGroup 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: inline-block;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c5 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c5[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c5:checked:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:not([disabled]):checked + .c7 {
  border-color: #444bc9;
}

.c5:checked + .c7::before {
  background: #444bc9;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c5[disabled]:checked + .c7::before {
  background: #9a9a9a;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c2:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c9 .c11 {
  top: 0.15em;
}

<div
  aria-describedby="label"
  aria-invalid="false"
  class="c0 c1"
  role="group"
>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Sunny"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="sunny"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Sunny
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Windy"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="windy"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Windy
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Overcast"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="overcast"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Overcast
    </span>
  </label>
</div>
`;

exports[`renders correctly for a disabled RadioGroup 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: inline-block;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c5 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c5[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c5:checked:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:not([disabled]):checked + .c7 {
  border-color: #444bc9;
}

.c5:checked + .c7::before {
  background: #444bc9;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c5[disabled]:checked + .c7::before {
  background: #9a9a9a;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c2:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c9 .c11 {
  top: 0.15em;
}

<div
  aria-describedby="label"
  aria-invalid="false"
  class="c0 c1"
  role="group"
>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Sunny"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      disabled=""
      name="weather"
      type="radio"
      value="sunny"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Sunny
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Windy"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      disabled=""
      name="weather"
      type="radio"
      value="windy"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Windy
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Overcast"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      disabled=""
      name="weather"
      type="radio"
      value="overcast"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Overcast
    </span>
  </label>
</div>
`;

exports[`renders correctly for a disabled RadioGroup option 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: inline-block;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c5 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c5[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c5:checked:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:not([disabled]):checked + .c7 {
  border-color: #444bc9;
}

.c5:checked + .c7::before {
  background: #444bc9;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c5[disabled]:checked + .c7::before {
  background: #9a9a9a;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c2:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c9 .c11 {
  top: 0.15em;
}

<div
  aria-describedby="label"
  aria-invalid="false"
  class="c0 c1"
  role="group"
>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Sunny"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      disabled=""
      name="weather"
      type="radio"
      value="sunny"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Sunny
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Windy"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="windy"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Windy
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Overcast"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="overcast"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Overcast
    </span>
  </label>
</div>
`;

exports[`states renders correctly for an RadioGroup with state danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: inline-block;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c8 {
  border-color: #c9444d;
  box-shadow: #c9444d 0px 0px 0px 1px !important;
}

.c11[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c11:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c7 {
  border-color: #444bc9;
}

.c11:checked + .c7::before {
  background: #444bc9;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c11[disabled]:checked + .c7::before {
  background: #9a9a9a;
}

.c5 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c5[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c5:checked:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:not([disabled]):checked + .c7 {
  border-color: #444bc9;
}

.c5:checked + .c7 {
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:checked + .c7::before {
  background: #444bc9;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c5[disabled]:checked + .c7::before {
  background: #9a9a9a;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c2:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c9 .c12 {
  top: 0.15em;
}

<div
  aria-describedby="label"
  aria-invalid="true"
  class="c0 c1"
  role="group"
>
  <label
    aria-describedby="label"
    aria-invalid="true"
    aria-label="Sunny"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="sunny"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Sunny
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="true"
    aria-label="Windy"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="windy"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Windy
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="true"
    aria-label="Overcast"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="overcast"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Overcast
    </span>
  </label>
</div>
`;

exports[`states renders correctly for an RadioGroup with state primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: inline-block;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c8 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c11[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c11:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c7 {
  border-color: #444bc9;
}

.c11:checked + .c7::before {
  background: #444bc9;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c11[disabled]:checked + .c7::before {
  background: #9a9a9a;
}

.c5 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c5[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c5:checked:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:not([disabled]):checked + .c7 {
  border-color: #444bc9;
}

.c5:checked + .c7 {
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:checked + .c7::before {
  background: #444bc9;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c5[disabled]:checked + .c7::before {
  background: #9a9a9a;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c2:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c9 .c12 {
  top: 0.15em;
}

<div
  aria-describedby="label"
  aria-invalid="false"
  class="c0 c1"
  role="group"
>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Sunny"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="sunny"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Sunny
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Windy"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="windy"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Windy
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Overcast"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="overcast"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Overcast
    </span>
  </label>
</div>
`;

exports[`states renders correctly for an RadioGroup with state success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: inline-block;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c8 {
  border-color: #2c8453;
  box-shadow: #2c8453 0px 0px 0px 1px !important;
}

.c11[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c11:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c7 {
  border-color: #444bc9;
}

.c11:checked + .c7::before {
  background: #444bc9;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c11[disabled]:checked + .c7::before {
  background: #9a9a9a;
}

.c5 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c5[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c5:checked:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:not([disabled]):checked + .c7 {
  border-color: #444bc9;
}

.c5:checked + .c7 {
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:checked + .c7::before {
  background: #444bc9;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c5[disabled]:checked + .c7::before {
  background: #9a9a9a;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c2:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c9 .c12 {
  top: 0.15em;
}

<div
  aria-describedby="label"
  aria-invalid="false"
  class="c0 c1"
  role="group"
>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Sunny"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="sunny"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Sunny
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Windy"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="windy"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Windy
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Overcast"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="overcast"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Overcast
    </span>
  </label>
</div>
`;

exports[`states renders correctly for an RadioGroup with state warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: inline-block;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c8 {
  border-color: #f2a100;
  box-shadow: #f2a100 0px 0px 0px 1px !important;
}

.c11[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c11:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c7 {
  border-color: #444bc9;
}

.c11:checked + .c7::before {
  background: #444bc9;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c11[disabled]:checked + .c7::before {
  background: #9a9a9a;
}

.c5 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c5[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c5:checked:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:focus + .c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:not([disabled]):checked + .c7 {
  border-color: #444bc9;
}

.c5:checked + .c7 {
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c5:checked + .c7::before {
  background: #444bc9;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c5[disabled]:checked + .c7::before {
  background: #9a9a9a;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c2:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c9 .c12 {
  top: 0.15em;
}

<div
  aria-describedby="label"
  aria-invalid="false"
  class="c0 c1"
  role="group"
>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Sunny"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="sunny"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Sunny
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Windy"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="windy"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Windy
    </span>
  </label>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Overcast"
    aria-required="false"
    class="c2 c3 c4 c1"
  >
    <input
      class="c5 c6"
      name="weather"
      type="radio"
      value="overcast"
    />
    <div
      class="c7 c8 c1"
    />
    <span
      class="c9 c10"
      id="label"
    >
      Overcast
    </span>
  </label>
</div>
`;
